clang/test/BSC/Negative/Trait/r3/function_param_is_trait1/function_param_is_trait1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait A {

};

int foo(A* a) { // expected-error {{must use 'trait' tag to refer to type 'A'}}
    return 0;
}